<?xml version="1.0"?>
<package format="3">
  <name>buoyancy_plugin</name>
  <version>0.0.1</version>
  <description>Gazebo plugin som simulerer oppdrift</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>ignition-math6</depend>

  <export>
    <gazebo plugin_path="${prefix}/lib"
             gazebo_media_path="${prefix}/share/buoyancy_plugin"/>
  </export>
</package>
